# SENTINEL-V2.0

./: .gitattributes  .gitignore  LICENSE  README.md  README_v1.1.md  pyproject.toml
ICG Videos/: icg_adecuada__anastomosis_colorr.avi  icg_adecuada__caso_estándar.avi  icg_adecuada__perfusión_excelent.avi  icg_adecuada__pico_tardío_ok.avi  icg_alta_variabilidad_test_ruido.avi  icg_borderline__amplitud_baja.avi  icg_borderline__rise_lento.avi  icg_borderline__t1_en_límite.avi  icg_borderline__t2_en_límite.avi  icg_caso_límite_extremo.avi  icg_comprometida__bajo_índice_ni.avi  icg_comprometida__clásica.avi  icg_comprometida__severa.avi  icg_comprometida__solo_t1_alto.avi
changelog/: CHANGELOG_v1.1.md  CHANGELOG_v2.0.md
data/: bioconnect_classifier.joblib  bioconnect_historial.json  experiment_report.json  experiment_summary.txt  synthetic_dataset.npz  synthetic_dataset_params.json  validation_results.json
docs/: ANALISIS_PROYECTO.md  EVALUACION_INTEGRAL_PROYECTO.md  SOLUCION_PDF_SELECTOR.md  TRANSLATION_KEYS.md
locales/: de.json  en.json  fr.json  ja.json  pt.json
src/: BCV1.py  BCV1_gen_video.py  BCV1_lector_video.py  BCV1_mapa_calor.py  BCV1_reporte_pdf.py  BCV1_segmentacion.py  BCV1_tiempo_real.py  BioConnect_App.py  bioconnect_db.py  bioconnect_manual_pdf.py  bioconnect_prefs.py  classifier.py  config.py  data_persistence.py  font_manager.py  logger.py  parameter_extraction.py  sentinel_settings.py  sentinel_splash.py  validation.py
tests/: conftest.py  falsification_tests.py  robustness_tests.py  synthetic_validation_pipeline.py  test_classification.py  (+4 more)
(+4 files in other folders)
