[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioconnect-sentinel"
version = "2.0.0"
description = "Sistema de análisis cuantitativo de perfusión ICG intraoperatoria"
readme = "README_v1.1.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bioconnect — Universidad de Guadalajara"},
]
keywords = ["ICG", "perfusion", "fluorescence", "intraoperative", "biomedical"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "opencv-python>=4.7",
    "matplotlib>=3.7",
    "reportlab>=4.0",
    "Pillow>=9.5",
    "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
bioconnect = "BioConnect_App:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
